--- a/elme/ImagesCell.xib
+++ b/elme/ImagesCell.xib
@@ -11,6 +11,7 @@
 			<string key="NS.object.0">1181</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
+			<string>IBUIScrollView</string>
 			<string>IBUITableViewCell</string>
 			<string>IBUIImageView</string>
 			<string>IBUIView</string>
@@ -41,15 +42,15 @@
 						<reference key="NSNextResponder" ref="422865625"/>
 						<int key="NSvFlags">256</int>
 						<array class="NSMutableArray" key="NSSubviews">
-							<object class="IBUIView" id="264103509">
+							<object class="IBUIView" id="1046347277">
 								<reference key="NSNextResponder" ref="672756969"/>
 								<int key="NSvFlags">301</int>
 								<array class="NSMutableArray" key="NSSubviews">
 									<object class="IBUIImageView" id="1023418410">
-										<reference key="NSNextResponder" ref="264103509"/>
+										<reference key="NSNextResponder" ref="1046347277"/>
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{20, 0}, {30, 30}}</string>
-										<reference key="NSSuperview" ref="264103509"/>
+										<reference key="NSSuperview" ref="1046347277"/>
 										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="1020998537"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -62,11 +63,12 @@
 										</object>
 									</object>
 									<object class="IBUILabel" id="1020998537">
-										<reference key="NSNextResponder" ref="264103509"/>
+										<reference key="NSNextResponder" ref="1046347277"/>
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{58, 5}, {134, 21}}</string>
-										<reference key="NSSuperview" ref="264103509"/>
+										<reference key="NSSuperview" ref="1046347277"/>
 										<reference key="NSWindow"/>
+										<reference key="NSNextKeyView"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIOpaque">NO</bool>
 										<bool key="IBUIClipsSubviews">YES</bool>
@@ -102,11 +104,24 @@
 								<string key="NSReuseIdentifierKey">_NS:10</string>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 							</object>
+							<object class="IBUIScrollView" id="375908578">
+								<reference key="NSNextResponder" ref="672756969"/>
+								<int key="NSvFlags">274</int>
+								<string key="NSFrameSize">{356, 50}</string>
+								<reference key="NSSuperview" ref="672756969"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="1046347277"/>
+								<string key="NSReuseIdentifierKey">_NS:9</string>
+								<bool key="IBUIClipsSubviews">YES</bool>
+								<bool key="IBUIMultipleTouchEnabled">YES</bool>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+							</object>
 						</array>
 						<string key="NSFrameSize">{356, 50}</string>
 						<reference key="NSSuperview" ref="422865625"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="264103509"/>
+						<reference key="NSNextKeyView" ref="375908578"/>
 						<string key="NSReuseIdentifierKey">_NS:11</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
@@ -130,7 +145,24 @@
 			</object>
 		</array>
 		<object class="IBObjectContainer" key="IBDocument.Objects">
-			<array class="NSMutableArray" key="connectionRecords"/>
+			<array class="NSMutableArray" key="connectionRecords">
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">noImagesView</string>
+						<reference key="source" ref="422865625"/>
+						<reference key="destination" ref="1046347277"/>
+					</object>
+					<int key="connectionID">6</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">scrollView</string>
+						<reference key="source" ref="422865625"/>
+						<reference key="destination" ref="375908578"/>
+					</object>
+					<int key="connectionID">9</int>
+				</object>
+			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<array key="orderedObjects">
 					<object class="IBObjectRecord">
@@ -154,13 +186,14 @@
 						<int key="objectID">2</int>
 						<reference key="object" ref="422865625"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="264103509"/>
+							<reference ref="1046347277"/>
+							<reference ref="375908578"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">5</int>
-						<reference key="object" ref="264103509"/>
+						<reference key="object" ref="1046347277"/>
 						<array class="NSMutableArray" key="children">
 							<reference ref="1020998537"/>
 							<reference ref="1023418410"/>
@@ -170,12 +203,17 @@
 					<object class="IBObjectRecord">
 						<int key="objectID">4</int>
 						<reference key="object" ref="1023418410"/>
-						<reference key="parent" ref="264103509"/>
+						<reference key="parent" ref="1046347277"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">3</int>
 						<reference key="object" ref="1020998537"/>
-						<reference key="parent" ref="264103509"/>
+						<reference key="parent" ref="1046347277"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">8</int>
+						<reference key="object" ref="375908578"/>
+						<reference key="parent" ref="422865625"/>
 					</object>
 				</array>
 			</object>
@@ -188,18 +226,33 @@
 				<string key="3.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="4.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="5.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="8.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
 			<dictionary class="NSMutableDictionary" key="unlocalizedProperties"/>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">5</int>
+			<int key="maxID">9</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
 				<object class="IBPartialClassDescription">
 					<string key="className">ImagesCell</string>
 					<string key="superclassName">UITableViewCell</string>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="noImagesView">UIView</string>
+						<string key="scrollView">UIScrollView</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="noImagesView">
+							<string key="name">noImagesView</string>
+							<string key="candidateClassName">UIView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="scrollView">
+							<string key="name">scrollView</string>
+							<string key="candidateClassName">UIScrollView</string>
+						</object>
+					</dictionary>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/ImagesCell.h</string>
