--- a/elme/ImagesCell.xib
+++ b/elme/ImagesCell.xib
@@ -35,7 +35,7 @@
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
 			<object class="IBUITableViewCell" id="422865625">
-				<reference key="NSNextResponder"/>
+				<nil key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="IBUIView" id="672756969">
@@ -51,7 +51,6 @@
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{20, 0}, {30, 30}}</string>
 										<reference key="NSSuperview" ref="1046347277"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="1020998537"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<int key="IBUIContentMode">4</int>
@@ -67,8 +66,6 @@
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{58, 5}, {134, 21}}</string>
 										<reference key="NSSuperview" ref="1046347277"/>
-										<reference key="NSWindow"/>
-										<reference key="NSNextKeyView"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIOpaque">NO</bool>
 										<bool key="IBUIClipsSubviews">YES</bool>
@@ -99,7 +96,6 @@
 								</array>
 								<string key="NSFrame">{{72, 10}, {212, 30}}</string>
 								<reference key="NSSuperview" ref="672756969"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1023418410"/>
 								<string key="NSReuseIdentifierKey">_NS:10</string>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -109,7 +105,6 @@
 								<int key="NSvFlags">274</int>
 								<string key="NSFrameSize">{356, 50}</string>
 								<reference key="NSSuperview" ref="672756969"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1046347277"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -120,7 +115,6 @@
 						</array>
 						<string key="NSFrameSize">{356, 50}</string>
 						<reference key="NSSuperview" ref="422865625"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="375908578"/>
 						<string key="NSReuseIdentifierKey">_NS:11</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
@@ -135,8 +129,6 @@
 					</object>
 				</array>
 				<string key="NSFrameSize">{356, 51}</string>
-				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="672756969"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -156,11 +148,11 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">scrollView</string>
+						<string key="label">imagesView</string>
 						<reference key="source" ref="422865625"/>
 						<reference key="destination" ref="375908578"/>
 					</object>
-					<int key="connectionID">9</int>
+					<int key="connectionID">10</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -226,13 +218,14 @@
 				<string key="3.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="4.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="5.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="8.CustomClassName">ImagesView</string>
 				<string key="8.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
 			<dictionary class="NSMutableDictionary" key="unlocalizedProperties"/>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">9</int>
+			<int key="maxID">10</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -256,6 +249,14 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/ImagesCell.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">ImagesView</string>
+					<string key="superclassName">UIScrollView</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/ImagesView.h</string>
 					</object>
 				</object>
 			</array>
