--- a/elme/ImagesCell.xib
+++ b/elme/ImagesCell.xib
@@ -35,7 +35,7 @@
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
 			<object class="IBUITableViewCell" id="422865625">
-				<nil key="NSNextResponder"/>
+				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="IBUIView" id="672756969">
@@ -66,6 +66,7 @@
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{58, 5}, {134, 21}}</string>
 										<reference key="NSSuperview" ref="1046347277"/>
+										<reference key="NSNextKeyView"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIOpaque">NO</bool>
 										<bool key="IBUIClipsSubviews">YES</bool>
@@ -94,7 +95,7 @@
 										</object>
 									</object>
 								</array>
-								<string key="NSFrame">{{72, 10}, {212, 30}}</string>
+								<string key="NSFrame">{{72, 9}, {212, 30}}</string>
 								<reference key="NSSuperview" ref="672756969"/>
 								<reference key="NSNextKeyView" ref="1023418410"/>
 								<string key="NSReuseIdentifierKey">_NS:10</string>
@@ -103,7 +104,7 @@
 							<object class="IBUIScrollView" id="375908578">
 								<reference key="NSNextResponder" ref="672756969"/>
 								<int key="NSvFlags">274</int>
-								<string key="NSFrameSize">{356, 50}</string>
+								<string key="NSFrame">{{8, 8}, {340, 34}}</string>
 								<reference key="NSSuperview" ref="672756969"/>
 								<reference key="NSNextKeyView" ref="1046347277"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -113,7 +114,7 @@
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 							</object>
 						</array>
-						<string key="NSFrameSize">{356, 50}</string>
+						<string key="NSFrameSize">{356, 49}</string>
 						<reference key="NSSuperview" ref="422865625"/>
 						<reference key="NSNextKeyView" ref="375908578"/>
 						<string key="NSReuseIdentifierKey">_NS:11</string>
@@ -128,7 +129,8 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 				</array>
-				<string key="NSFrameSize">{356, 51}</string>
+				<string key="NSFrameSize">{356, 50}</string>
+				<reference key="NSSuperview"/>
 				<reference key="NSNextKeyView" ref="672756969"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -227,40 +229,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">10</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">ImagesCell</string>
-					<string key="superclassName">UITableViewCell</string>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="noImagesView">UIView</string>
-						<string key="scrollView">UIScrollView</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="noImagesView">
-							<string key="name">noImagesView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="scrollView">
-							<string key="name">scrollView</string>
-							<string key="candidateClassName">UIScrollView</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/ImagesCell.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">ImagesView</string>
-					<string key="superclassName">UIScrollView</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/ImagesView.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
