--- a/elme/ImagesCell.xib
+++ b/elme/ImagesCell.xib
@@ -51,6 +51,7 @@
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{20, 0}, {30, 30}}</string>
 										<reference key="NSSuperview" ref="1046347277"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="1020998537"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<int key="IBUIContentMode">4</int>
@@ -66,6 +67,7 @@
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{58, 5}, {134, 21}}</string>
 										<reference key="NSSuperview" ref="1046347277"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -95,8 +97,9 @@
 										</object>
 									</object>
 								</array>
-								<string key="NSFrame">{{72, 9}, {212, 30}}</string>
+								<string key="NSFrame">{{72, 19}, {212, 30}}</string>
 								<reference key="NSSuperview" ref="672756969"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1023418410"/>
 								<string key="NSReuseIdentifierKey">_NS:10</string>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -104,8 +107,9 @@
 							<object class="IBUIScrollView" id="375908578">
 								<reference key="NSNextResponder" ref="672756969"/>
 								<int key="NSvFlags">274</int>
-								<string key="NSFrame">{{8, 8}, {340, 34}}</string>
+								<string key="NSFrame">{{8, 8}, {340, 54}}</string>
 								<reference key="NSSuperview" ref="672756969"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1046347277"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -114,8 +118,9 @@
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 							</object>
 						</array>
-						<string key="NSFrameSize">{356, 49}</string>
+						<string key="NSFrameSize">{356, 69}</string>
 						<reference key="NSSuperview" ref="422865625"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="375908578"/>
 						<string key="NSReuseIdentifierKey">_NS:11</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
@@ -129,8 +134,9 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 				</array>
-				<string key="NSFrameSize">{356, 50}</string>
+				<string key="NSFrameSize">{356, 70}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="672756969"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -229,7 +235,40 @@
 			<nil key="sourceID"/>
 			<int key="maxID">10</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">ImagesCell</string>
+					<string key="superclassName">UITableViewCell</string>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="imagesView">ImagesView</string>
+						<string key="noImagesView">UIView</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="imagesView">
+							<string key="name">imagesView</string>
+							<string key="candidateClassName">ImagesView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="noImagesView">
+							<string key="name">noImagesView</string>
+							<string key="candidateClassName">UIView</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/ImagesCell.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">ImagesView</string>
+					<string key="superclassName">UIScrollView</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/ImagesView.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
